cluster-DOKS-TLS/k8s/my-sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: php-blog
spec:
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: php-blog
  ports:
    - port: 3306
  clusterIP: "None"
