cluster-DOKS-TLS/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx-dyma.site
      secretName: letsencrypt-tls
  rules:
    - host: nginx-dyma.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-nginx-service
                port:
                  number: 80
